# genai-demo

./: .claudeignore  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  README.md  WORKFLOW.md  docker-compose.yml  orchestrer-intelligence-gatherly.pptx  orchestrer-intelligence-review-moussa.pptx  ~$orchestrer-intelligence-gatherly.pptx
.claude/: settings.json
.claude/agents/: code-reviewer.md  frontend-reviewer.md  migration-reviewer.md  security-auditor.md  test-writer.md
.claude/hooks/: lint-changed.py
.claude/skills/audit-security/: SKILL.md
.claude/skills/audit-service/: SKILL.md
.claude/skills/commit-sc/: SKILL.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/devops/: SKILL.md
.claude/skills/explore-codebase/: SKILL.md
.claude/skills/frontend-design/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
deploy/: CICD.md  DEPLOY.md
deploy/gcp/: .gitignore  README.md  build-and-push.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: CONFERENCE_PREP.md  DEMO-RECORDING.md  SEED_BACKLOG.md  SEED_FINDINGS.md  TUTORIAL-FR.html  TUTORIAL-FR.md  demo-runbook.md
docs/demo/: README.md  build_moment1_cast.py  moment-1-waitlist-promote.cast
gatherly-be/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
gatherly-be/src/gatherly/: __init__.py  config.py  db.py  deps.py  errors.py  main.py  rate_limit.py  rbac.py  security.py  token_store.py
gatherly-be/src/gatherly/models/: __init__.py  audit.py  base.py  event.py  guest.py  notification.py  user.py
gatherly-be/src/gatherly/repositories/: __init__.py  audit.py  events.py  guests.py  notifications.py  users.py
gatherly-be/src/gatherly/routers/: __init__.py  auth.py  billing.py  events.py  guests.py  notifications.py  rsvp.py
gatherly-be/src/gatherly/schemas/: auth.py  base.py  billing.py  event.py  guest.py  insights.py  notification.py  rsvp.py
gatherly-be/src/gatherly/scripts/: __init__.py  seed.py
gatherly-be/src/gatherly/services/: __init__.py  account.py  auth_service.py  billing.py  email.py  events.py  google_auth.py  guests.py  insights.py  notifications.py  rsvp.py
gatherly-be/tests/: conftest.py  test_account_auth.py  test_auth.py  test_billing.py  test_event_depth.py  test_events.py  test_guest_isolation.py  test_guest_ops.py  test_insights.py  test_notifications.py  test_rsvp.py  test_waitlist_position.py  test_waitlist_promote.py
gatherly-fe/: .gitignore  .npmrc  README.md  netlify.toml  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
gatherly-fe/__tests__/: api-client.test.ts  auth-store.test.ts  format-relative-time.test.ts  notification-bell.test.tsx  notifications-page.test.tsx  rsvp-badge.test.tsx  use-notifications.test.tsx  use-require-auth.test.ts
gatherly-fe/app/: globals.css  layout.tsx  page.tsx
gatherly-fe/components/: app-header.tsx  auth-shell.tsx  billing-card.tsx  confetti.tsx  create-event-dialog.tsx  event-insights.tsx  google-signin-button.tsx  import-guests-dialog.tsx  invite-guest-dialog.tsx  notification-bell.tsx  rsvp-badge.tsx  theme-toggle.tsx
gatherly-fe/hooks/: use-complete-auth.ts  use-notifications.ts
gatherly-fe/i18n/: request.ts
gatherly-fe/lib/: format-date.ts
gatherly-fe/messages/: en.json  fr.json
servicecat-be/: .env.example  Makefile  README.md  alembic.ini  pyproject.toml
servicecat-be/migrations/: env.py  script.py.mako
servicecat-be/migrations/versions/: 20260527_1200_initial_workspaces_users_memberships_rls.py  20260527_1300_add_user_hashed_password.py  20260527_1400_audit_logs_append_only.py  20260527_1500_services_catalog.py  20260527_1600_scorecard_criteria.py  20260527_1700_seed_documentation_criteria.py  20260527_1800_scorecard_runs_findings.py  20260527_1900_service_dependencies.py
servicecat-be/src/servicecat/: __init__.py  config.py  db.py  deps.py  errors.py  http.py  jwt_keys.py  main.py  rbac.py  redis_client.py  repo_clone.py
servicecat-be/src/servicecat/models/: __init__.py  audit.py  base.py  finding.py  membership.py  scorecard.py  scorecard_run.py  service.py  service_dependency.py  user.py  workspace.py
servicecat-be/src/servicecat/repositories/: __init__.py  audit.py  memberships.py  scorecard_runs.py  service_dependencies.py  services.py  users.py  workspaces.py
servicecat-be/src/servicecat/routers/: __init__.py  audit.py  auth.py  findings.py  scorecard_runs.py  service_dependencies.py  services.py  workspaces.py
servicecat-be/src/servicecat/schemas/: audit.py  auth.py  base.py  finding.py  scorecard_run.py  service.py  service_dependency.py  workspace.py
servicecat-be/src/servicecat/scorecards/: __init__.py  base.py  documentation.py
servicecat-be/src/servicecat/scripts/: __init__.py  seed.py
servicecat-be/src/servicecat/services/: __init__.py  auth_service.py  catalog.py  dependencies.py  rbac_service.py  scorecard_runner.py  security.py  token_store.py
servicecat-be/src/servicecat/workers/: __init__.py  scorecard.py
servicecat-be/tests/: conftest.py  test_audit_endpoints.py  test_audit_log.py  test_auth_endpoints.py  test_auth_service.py  test_documentation_scorecard.py  test_findings_endpoint.py  test_health.py  test_rbac.py  test_redis_guards.py  test_rls.py  test_scorecard_run_endpoints.py  test_scorecard_runner.py  test_scorecard_runs_persistence.py  test_scorecards.py  test_security.py  test_service_dependency_endpoints.py  test_services_endpoints.py  test_workspace_guard.py  test_workspaces_endpoint.py
servicecat-fe/: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
servicecat-fe/__tests__/: api-client.test.ts  auth-store.test.ts  findings-table.test.tsx  severity-badge.test.tsx  tier-badge.test.tsx  use-require-auth.test.ts
servicecat-fe/app/: globals.css  layout.tsx  providers.tsx
servicecat-fe/components/: add-dependency-dialog.tsx  app-header.tsx  create-service-dialog.tsx  findings-table.tsx  run-scorecard-button.tsx  severity-badge.tsx  tier-badge.tsx
servicecat-fe/hooks/: use-require-auth.ts
servicecat-fe/messages/: en.json  fr.json
(+52 files in other folders)
