[project]
name = "gatherly"
version = "0.1.0"
description = "Gatherly — plan events, invite guests, collect RSVPs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "pyjwt[crypto]>=2.10",
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gatherly"]

# --- Lint: ruff (--select ALL --ignore D, mirroring the ServiceCat contract) ---
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "EM101", "EM102", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", "PLR2004", "ANN001", "ANN201", "ANN202", "ARG001", "S105", "S106",
    "SLF001",  # conftest resets a process-singleton's private state between tests
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "gatherly.models.base.Base",
    "gatherly.schemas.base.GatherlyBaseModel",
    "sqlalchemy.orm.DeclarativeBase",
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
]

# --- Type checking: mypy --strict on src/ ---
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]

# --- Tests ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/gatherly"]
branch = true
omit = ["*/scripts/*"]
concurrency = ["thread", "greenlet"]
