[project]
name = "servicecat"
version = "0.1.0"
description = "ServiceCat — Internal Developer Portal backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/servicecat"]

# --- Lint: ruff (CLAUDE.md contract: --select ALL --ignore D,ANN101,ANN102) ---
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["ALL"]
# D: docstrings (per CLAUDE.md). ANN101/ANN102 were removed from ruff (no-ops).
# COM812 conflicts with `ruff format` — ruff itself recommends disabling it.
ignore = ["D", "COM812"]

[tool.ruff.lint.per-file-ignores]
# Tests assert (S101), use literals (PLR2004), and take fixtures by name.
"tests/**/*.py" = ["S101", "PLR2004", "ANN001", "ANN201", "ARG001"]
# Alembic env runs as a script, not an importable package module.
"migrations/env.py" = ["INP001", "ERA001"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

# --- Type checking: mypy --strict on src/ ---
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["asyncpg.*"]
ignore_missing_imports = true

# --- Tests ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/servicecat"]
branch = true
