[project]
name = "servicecat"
version = "0.1.0"
description = "ServiceCat — Internal Developer Portal backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "pyjwt[crypto]>=2.10",
    "argon2-cffi>=23.1",
    "redis>=5.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/servicecat"]

# --- Lint: ruff (CLAUDE.md contract: --select ALL --ignore D,ANN101,ANN102) ---
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["ALL"]
# D: docstrings (per CLAUDE.md). ANN101/ANN102 were removed from ruff (no-ops).
# COM812 conflicts with `ruff format` — ruff itself recommends disabling it.
# EM101/EM102/TRY003: we intentionally pass contextual messages to the typed
# exceptions in servicecat.errors; the message-style rules add ceremony only.
ignore = ["D", "COM812", "EM101", "EM102", "TRY003"]

[tool.ruff.lint.per-file-ignores]
# Tests assert (S101), use literals (PLR2004), take fixtures by name, and the
# DB harness shells out to alembic (S603/S607) with trusted constant SQL (S608).
"tests/**/*.py" = [
    "S101", "PLR2004", "ANN001", "ANN201", "ARG001",
    "S603", "S607", "S608",  # subprocess + trusted-constant SQL in the DB harness
    "S105", "S106",  # hardcoded test passwords/tokens are fine in tests
]
# Alembic env runs as a script, not an importable package module.
"migrations/env.py" = ["INP001", "ERA001"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom legitimately calls these in defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
]

[tool.ruff.lint.flake8-type-checking]
# SQLAlchemy and Pydantic evaluate annotations at runtime to build mappers and
# models, so annotation-only imports on their subclasses must NOT be moved into
# a TYPE_CHECKING block (doing so raises NameError at class-definition time).
runtime-evaluated-base-classes = [
    "servicecat.models.base.Base",
    "servicecat.schemas.base.ServiceCatBaseModel",
    "sqlalchemy.orm.DeclarativeBase",
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
]

# --- Type checking: mypy --strict on src/ ---
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["asyncpg.*"]
ignore_missing_imports = true

# --- Tests ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/servicecat"]
branch = true
# Trace across the asyncio + SQLAlchemy-greenlet boundary so async request
# handlers invoked via the ASGI transport are attributed correctly.
concurrency = ["thread", "greenlet"]
